[package]
name = "nuklear-wgpu-rs"
version = "0.1.1"
authors = ["Greed <greedengineer4321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git" }
nuklear-sys = { git = "https://github.com/greedengineer/nuklear-sys.git" }
bytemuck = "1.2.0"
clipboard = "0.5.0"